--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">"Oremos Católico "</string>
+    <string name="app_name" translatable="false">"Oremos Católico - Mz"</string>
     <string name="configurations">Configurações</string>
     <string name="small">Pequeno</string>
     <string name="normal">Normal</string>
